# Haskell-Server-Generic-Library

./: .travis.yml  README.md  server-generic.cabal
src/Server/: Generic.hs
