name:                server-generic
version:             1.0.0
synopsis:            Auto-generate a server for your datatype
description:         This library auto-generates a REST API from any datatype
                     that derives the `Generic` interface
                     .
                     See the documentation in "Server.Generic" for an example of
                     how to use this library
homepage:            https://github.com/Gabriel439/Haskell-Server-Generic-Library
license:             BSD3
license-file:        LICENSE
author:              Gabriel Gonzalez
maintainer:          Gabriel439@gmail.com
copyright:           2016 Gabriel Gonzalez
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server.Generic
  default-language:    Haskell2010
  build-depends:       base >= 4.6 && < 5
                     , aeson
                     , bytestring
                     , http-types
                     , mtl
                     , text
                     , wai
                     , warp
  ghc-options:         -Wall
