name:                server-generic
version:             1.0.0
synopsis:            Auto-generate a server for your datatype
description:         This library auto-generates a REST API from any datatype
                     that derives the `Generic` interface
                     .
                     See the documentation in "Server.Generic" for an example of
                     how to use this library
homepage:            https://github.com/Gabriel439/Haskell-Server-Generic-Library
license:             BSD3
license-file:        LICENSE
author:              Gabriel Gonzalez
maintainer:          Gabriel439@gmail.com
copyright:           2016 Gabriel Gonzalez
category:            Web
build-type:          Simple
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1
cabal-version:       >=1.10

source-repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Server-Generic-Library

library
  hs-source-dirs:      src
  exposed-modules:     Server.Generic
  default-language:    Haskell2010
  build-depends:       base       >= 4.6      && < 5
                     , aeson                     < 0.12
                     , bytestring >= 0.10.0.0 && < 0.11
                     , http-types >= 0.7.0    && < 0.10
                     , mtl                       < 2.3
                     , text       >= 0.11.0.6 && < 1.3
                     , wai        >= 0.4.0    && < 3.3
                     , warp                      < 3.3
                     , void                      < 0.8
  ghc-options:         -Wall
